# MapboxCrossPlatformDemo

./: README.md
MapCanvas.xcworkspace/: contents.xcworkspacedata
MapCanvas.xcworkspace/xcuserdata/adrian.xcuserdatad/: UserInterfaceState.xcuserstate
android/: build.gradle
cpp/: CMakeLists.txt
cpp/libraries/glm/detail/: glm.cpp  type_half.inl
cpp/renderers/: MapTile.cpp  MapTile.h  MapTileRenderer.cpp  MapTileRenderer.h
cpp/renderers/gl/: GlMapTile.cpp  GlMapTile.h  GlMapTileRenderer.cpp  GlMapTileRenderer.h  GlUtils.cpp  GlUtils.h
cpp/shaders/gl/: maptile.frag  maptile.vert
cpp/utils/: AssetStorage.h  Utils.h
cpp/utils/android/: AndroidAssetStorage.cpp  AndroidAssetStorage.h  AndroidMapDelegate.cpp  AndroidMapDelegate.h  Bridge.h  OSUtils.cpp  OSUtils.h
cpp/utils/ios/: OSUtils.cpp  OSUtils.h  iOSAssetManager.h  iOSAssetManager.mm  iOSMapDelegate.cpp  iOSMapDelegate.h
cpp/views/: Canvas.cpp  Canvas.h  CanvasMap.cpp  CanvasMap.h  MapDelegate.h
demos/android/: settings.gradle
demos/android/app/: build.gradle
demos/ios/MapDemo/: AppDelegate.swift  SceneDelegate.swift  ViewController.swift
demos/ios/MapDemo.xcodeproj/: project.pbxproj
demos/ios/MapDemo/Base.lproj/: Main.storyboard
ios/MapCanvas/: IntermediateMapDelegate.swift  MapCanvas.h  MapDelegate.swift  MapVisualization.swift  Visualization+Extension.swift  Visualization.swift
ios/MapCanvas.xcodeproj/: project.pbxproj
ios/MapCanvas/bridges/: MapDelegateBridge.h  MapDelegateBridge.mm  MapVisualizationBridge.h  MapVisualizationBridge.mm  VisualizationBridge.h  VisualizationBridge.mm
(+18 files in other folders)
